# cornea-oct-app

./: .gitignore  .mcp.json  .rid  README.md  RECOVER_review_cases.py  requirements.txt
.github/workflows/: build-annotator.yml  build-cornea.yml
annotator_app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
annotator_app/src/: App.tsx  i18n.ts  main.tsx
annotator_app/src-tauri/: Cargo.toml  tauri.conf.json
cornea_app/: .gitignore  dev-launch.sh  index.html  package-lock.json  package.json  playwright.config.ts  serve.sh  vite.config.ts
cornea_app/python-sidecar/: api_server.py  artifacts.py  atlas3_test.py  atlas_test.py  burden_test.py  cohort.py  cohort_verify.py  consensus.py  controls_verify.py  cornea_bench.py  correction_video.py  ctrl_repro_bench.py  debug_align.py  depthnorm_diag.py  depthnorm_repro_test.py  export.py  gt_compare.py  k_calib.py  labels.py  masks.py  metrics_export.py  (+29 more)
cornea_app/src-tauri/: Cargo.toml  tauri.conf.json
cornea_app/src-tauri/capabilities/: default.json
cornea_app/src-tauri/icons/: icon.icns
cornea_app/src-tauri/src/: lib.rs
legacy/: README.md  oct_preprocess_streamlit_port.py
local_vision/: _extract_dicom_slice.py  _make_test_cornea.py  medgemma_bridge.py  segment_cornea_2d.py
output/: synthetic_oct.nrrd
slicer_bridge/: README.md  agent_annotate_seed.py  agent_refine_paint.py  auto_seed_volume.py  convert_to_nifti.py  live_bridge.py  preview_io.py  render_seed_previews.py  render_volume_context.py  run_seeded_grow.sh  seed_template.json  seeded_grow_from_seeds.py  slicer_volume_io.py
(+93 files in other folders)
